# enkrateia

./: README.md  pyproject.toml
src/enkrateia/: cli.py
